data/theme/gnome-shell.css
/* ... */
.dash-search-button-label {
    color: #cccccc;
    font-size: 12pt;
}

/* Apps */

.icon-grid {
    spacing: 36px;
    -shell-grid-item-size: 118px;
}

.icon-grid .overview-icon {
    icon-size: 96px;
}

.all-app {
    padding: 16px 25px 16px 16px;
    spacing: 20px;
}

.all-app:rtl {
    padding-right: 16px;
    padding-left: 25px;
}

.app-filter {
    font-size: 10.5pt;
    font-weight: bold;
    height: 2.85em;
    color: #aaa;
    width: 200px;
}

.app-filter:hover {
    color: #eee;
}

.app-filter:selected {
    color: #ffffff;
    background-image: url("filter-selected-ltr.svg");
    background-position: 190px 10px;
}

.app-filter:selected:rtl {
    background-image: url("filter-selected-rtl.svg");
    background-position: 10px 10px;
}

.app-filter:focus {
    outline: 1px solid #aaa;
}

.dash-item-container > .app-well-app {
    padding: 4px 8px;
}

.remove-favorite-icon {
    color: #a0a0a0;
}

.remove-favorite-icon:hover {
    color: white;
    icon-shadow: black 0px 2px 2px;
}

.app-well-app > .overview-icon,
.remove-favorite > .overview-icon,
.search-result-content > .overview-icon {
    border-radius: 4px;
    padding: 3px;
    border: 1px rgba(0,0,0,0);
    font-size: 7.5pt;
    color: white;
    transition-duration: 100;
    text-align: center;
}

.app-well-app.running > .overview-icon {
    text-shadow: black 0px 2px 2px;
    background-image: url("running-indicator.svg");
}

.app-well-app:selected > .overview-icon,
.search-result-content:selected > .overview-icon {
    background-color: rgba(255,255,255,0.33);
}

.app-well-app:hover > .overview-icon,
.remove-favorite:hover > .overview-icon,
.search-result-content:hover > .overview-icon {
    background-color: rgba(255,255,255,0.1);
    text-shadow: black 0px 2px 2px;
    transition-duration: 100;
}

.app-well-app:focus > .overview-icon,
.search-result-content:focus > .overview-icon {
    border: 1px solid #cccccc;
}

.app-well-menu {
    font-size: 9pt;
}

/* LookingGlass */

#LookingGlassDialog
{
  background-color: rgba(0,0,0,0.85);
  spacing: 4px;
  padding: 4px;
  border: 2px solid grey;
  border-radius: 4px;

  color: #88ff66;
}

#LookingGlassDialog > #Toolbar
{
  border: 1px solid grey;
  border-radius: 4px;
}

#LookingGlassDialog .labels {
  spacing: 4px;
}

#LookingGlassDialog .notebook-tab {
  padding: 2px;
}

#LookingGlassDialog .notebook-tab:hover {
  color: #00ff00;
}

#LookingGlassDialog .notebook-tab:selected {
  border: 1px solid #88ff66;
  border-radius: 4px;
  padding: 5px;
}

#LookingGlassDialog .lg-inspector-title {
    font-weight: bold;
    padding-bottom: 8px;
}

.lg-dialog StLabel
{
  color: #88ff66;
}

.lg-dialog StEntry
{
  color: #88ff66;
}

.lg-obj-inspector-title
{
  spacing: 4px;
}

.lg-obj-inspector-button
{
  border: 1px solid #88ff66;
  padding: 4px;
  border-radius: 4px;
}

.lg-obj-inspector-button:hover
{
  border: 1px solid #00ff00;
}

.lg-dialog .shell-link
{
  color: #88ff66;
}

.lg-dialog .shell-link:hover
{
  color: #00ff00;
}

#LookingGlassDialog StBoxLayout#EvalBox
{
  padding: 4px;
  spacing: 4px;
}

#LookingGlassDialog StBoxLayout#ResultsArea
{
  spacing: 4px;
}

#lookingGlassExtensions {
    padding: 4px;
}

.lg-extension-list {
    padding: 4px;
    spacing: 6px;
}

.lg-extension {
    border: 1px solid #6f6f6f;
    border-radius: 4px;
    padding: 4px;
}

.lg-extension-name {
    font-weight: bold;
}

.lg-extension-actions {
    spacing: 6px;
}

#LookingGlassPropertyInspector {
    background: rgba(0, 0, 0, 0.9);
    border: 2px solid grey;
    border-radius: 4px;
    padding: 6px;
    color: #88ff66;
}

/* Calendar popup */

#calendarArea {
    /* this is the width of the entire popup */
    width: 600px;
}

.calendar-vertical-separator {
    -stipple-width: 1px;
    -stipple-color: #505050;
    width: 1.5em;
}

#calendarPopup {
    border-radius: 5px;
    background: rgba(0,0,0,0.9);
    border: 1px solid rgba(128,128,128,0.45);
    color: white;
}

#calendarPopup .calendar {
    padding: 10px;
}

.calendar {
    padding: .4em 1.75em;
    spacing-rows: 0px;
    spacing-columns: 0px;
}

.calendar-month-label {
    color: #666666;
    font-size: 7.5pt;
    padding: 2px;
    font-weight: bold;
}

.calendar-change-month-back {
    width: 20px;
    height: 20px;
    background-image: url("calendar-arrow-left.svg");
    border-radius: 4px;
}

.calendar-change-month-back:rtl {
    background-image: url("calendar-arrow-right.svg");
}

.calendar-change-month-back:hover {
    background-color: #999999;
}
.calendar-change-month-back:active {
    background-color: #aaaaaa;
}

.calendar-change-month-forward {
    width: 20px;
    height: 20px;
    background-image: url("calendar-arrow-right.svg");
    border-radius: 4px;
}

.calendar-change-month-forward:rtl {
    background-image: url("calendar-arrow-left.svg");
}

.calendar-change-month-forward:hover {
    background-color: #999999;
}
.calendar-change-month-forward:active {
    background-color: #aaaaaa;
}

.datemenu-date-label {
    padding: .4em 1.75em;
    font-size: 10.5pt;
    color: #cccccc;
    font-weight: bold;
}

.calendar-day-base {
    font-size: 7.5pt;
    text-align: center;
    width: 2.4em;
    height: 2.4em;
}

.calendar-day-base:hover {
    background-color: #777777;
}

.calendar-day-base:active {
    background-color: #555555;
}

.calendar-day-heading {
    color: #666666;
}

.calendar-week-number {
    color: #666666;
    font-weight: bold;
}

/* Hack used in lieu of border-collapse - see calendar.js */
.calendar-day {
    border: 1px solid #333333;
    color: #888888;
    border-top-width: 0;
    border-left-width: 0;
}
.calendar-day-top {
    border-top-width: 1px;
}
.calendar-day-left {
    border-left-width: 1px;
}

.calendar-work-day {
}

.calendar-nonwork-day {
    background-color: rgba(128, 128, 128, .1);
}

.calendar-today {
    background-image: url("calendar-today.svg");
    text-shadow: black 0px 2px 2px;
    color: #ffffff;
    font-weight: bold;
}

.calendar-other-month-day {
    color: #333333;
}
/* ... */

